--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -84,7 +84,7 @@ a#scrollUp i{
 
 
 .contactinfo ul li a:hover{
-	background:inherit;
+  background:inherit;
 }
 
 
@@ -97,7 +97,7 @@ a#scrollUp i{
 
 
 .social-icons ul li{
-	display:inline-block;
+  display:inline-block;
 }
 
 .social-icons ul li a i {
@@ -122,19 +122,19 @@ a#scrollUp i{
 }
 
 .fa-twitter:hover  {
-	background:#5BBCEC;
+  background:#5BBCEC;
 }
 
 .fa-linkedin:hover  {
-	background:#FF4518;
+  background:#FF4518;
 }
 
 .fa-dribbble:hover  {
-	background:#90C9DC;
+  background:#90C9DC;
 }
 
 .fa-google-plus:hover  {
-	background:#CE3C2D;
+  background:#CE3C2D;
 }
 
 .header-middle .container .row {
@@ -150,7 +150,7 @@ a#scrollUp i{
 }
 
 .header-middle .container .row .col-sm-8 {
-	padding-right:0;
+  padding-right:0;
 }
 
 .usa {
@@ -163,9 +163,9 @@ a#scrollUp i{
 }
 
 .usa:hover {
-	background:#FE980F;
-	color:#fff;
-	border-color:#FE980F;
+  background:#FE980F;
+  color:#fff;
+  border-color:#FE980F;
 }
 
 .usa:active, .usa.active {
@@ -189,7 +189,7 @@ a#scrollUp i{
 
 
 .shop-menu ul li {
-	display:inline-block;
+  display:inline-block;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -212,13 +212,13 @@ a#scrollUp i{
 
 
 .shop-menu ul li a i{
-	margin-right:3px;
+  margin-right:3px;
 }
 
 
 .shop-menu ul li a:hover {
-	color:#fe980f;
-	background:#fff;
+  color:#fe980f;
+  background:#fff;
 }
 
 
@@ -241,17 +241,17 @@ a#scrollUp i{
 }
 
 .mainmenu ul li a {
-	color: #696763;
-	font-family: 'Roboto', sans-serif;
-	font-size: 17px;
-	font-weight: 300;
-	padding: 0;
-	padding-bottom: 10px;
+  color: #696763;
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  font-weight: 300;
+  padding: 0;
+  padding-bottom: 10px;
 }
 
 .mainmenu ul li a:hover, .mainmenu ul li a.active,  .shop-menu ul li a.active{
-	background:none;
-	color:#fdb45e;
+  background:none;
+  color:#fdb45e;
 }
 
 
@@ -290,18 +290,18 @@ a#scrollUp i{
 }
 
 ul.sub-menu {
-	position: absolute;
-	top: 30px;
-	left: 0;
-	background: rgba(0, 0, 0, 0.6);
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	width: 220px;
-	-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
-	display: none;
-	z-index: 999;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 220px;
+  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
+  display: none;
+  z-index: 999;
 }
 
 .dropdown ul.sub-menu li .active{
@@ -463,7 +463,7 @@ ul.sub-menu {
   overflow: hidden;
 }
 .address  img {
-	width:100%;
+  width:100%;
 }
 
 .address p {
@@ -495,15 +495,15 @@ ul.sub-menu {
 }
 
 .single-widget h2 i{
-	margin-right:15px;
+  margin-right:15px;
 }
 
 .single-widget ul li a{
-	color: #8C8C88;
-	font-family: 'Roboto', sans-serif;
-	font-size: 14px;
-	font-weight: 300;
-	padding: 5px 0;
+  color: #8C8C88;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 5px 0;
 }
 
 .single-widget ul li a i {
@@ -511,8 +511,8 @@ ul.sub-menu {
 }
 
 .single-widget ul li a:hover{
-	background:none;
-	color:#FE980F;
+  background:none;
+  color:#FE980F;
 }
 
 
@@ -544,7 +544,7 @@ ul.sub-menu {
 
 .searchform  button:hover, 
 .searchform  button:focus{
-	background-color:#FE980F;
+  background-color:#FE980F;
 }
 
 .searchform p {
@@ -588,7 +588,7 @@ ul.sub-menu {
 }
 
 .carousel-indicators li.active {
-	  background: #FE980F;
+    background: #FE980F;
 }
 
 .item {
@@ -614,7 +614,7 @@ ul.sub-menu {
 }
 
 .item h1 span {
-	color:#FE980F;
+  color:#FE980F;
 }
 
 .item h2 {
@@ -627,10 +627,10 @@ ul.sub-menu {
 }
 
 .item  p {
-	color:#363432;
-	font-size:16px;
-	font-weight:300;
-	font-family: 'Roboto', sans-serif;
+  color:#363432;
+  font-size:16px;
+  font-weight:300;
+  font-family: 'Roboto', sans-serif;
 }
 
 .get {
@@ -683,46 +683,46 @@ ul.sub-menu {
 }
 
 .left-sidebar h2:after, h2.title:after{
-	content: " ";
-	position: absolute;
-	border: 1px solid #f5f5f5;
-	bottom:8px;
-	left: 0;
-	width: 100%;
-	height: 0;
-	z-index: -2;
+  content: " ";
+  position: absolute;
+  border: 1px solid #f5f5f5;
+  bottom:8px;
+  left: 0;
+  width: 100%;
+  height: 0;
+  z-index: -2;
 }
 
 .left-sidebar h2:before{
-	content: " ";
-	position: absolute;
-	background: #fff;
-	bottom: -6px;
-	width: 130px;
-	height: 30px;
-	z-index: -1;
-	left: 50%;
-	margin-left: -65px;
+  content: " ";
+  position: absolute;
+  background: #fff;
+  bottom: -6px;
+  width: 130px;
+  height: 30px;
+  z-index: -1;
+  left: 50%;
+  margin-left: -65px;
 }
 
 h2.title:before{
-	content: " ";
-	position: absolute;
-	background: #fff;
-	bottom: -6px;
-	width: 220px;
-	height: 30px;
-	z-index: -1;
-	left: 50%;
-	margin-left: -110px;
+  content: " ";
+  position: absolute;
+  background: #fff;
+  bottom: -6px;
+  width: 220px;
+  height: 30px;
+  z-index: -1;
+  left: 50%;
+  margin-left: -110px;
 }
 
 .category-products .panel {
-	background-color: #FFFFFF;
-	border: 0px;
-	border-radius: 0px;
-	box-shadow:none;
-	margin-bottom: 0px;
+  background-color: #FFFFFF;
+  border: 0px;
+  border-radius: 0px;
+  box-shadow:none;
+  margin-bottom: 0px;
 }
 
 .category-products .panel-default .panel-heading {
@@ -841,7 +841,7 @@ h2.title:before{
 }
 
 .features_items{
-	overflow:hidden;
+  overflow:hidden;
 }
 
 
@@ -857,9 +857,9 @@ h2.title {
 }
 
 .product-image-wrapper{
-	border:1px solid #F7F7F5;
-	overflow: hidden;
-	margin-bottom:30px;
+  border:1px solid #F7F7F5;
+  overflow: hidden;
+  margin-bottom:30px;
 }
 
 .single-products {
@@ -873,16 +873,16 @@ h2.title {
 }
 
 .productinfo h2{
-	color: #FE980F;
-	font-family: 'Roboto', sans-serif;
-	font-size: 24px;
-	font-weight: 700;
+  color: #FE980F;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: 700;
 }
 .product-overlay h2{
-	color: #fff;
-	font-family: 'Roboto', sans-serif;
-	font-size: 24px;
-	font-weight: 700;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 
@@ -910,7 +910,6 @@ h2.title {
   transition: height 500ms ease 0s;
   width: 100%;
   display: block;
-  
 }
 
 .single-products:hover .product-overlay {
@@ -974,7 +973,7 @@ h2.title {
 }
 
 .add-to-cart i{
-	margin-right:5px;
+  margin-right:5px;
 }
 
 .add-to-cart:hover {
@@ -995,12 +994,12 @@ h2.title {
 }
 
 .choose ul li a i{
-	margin-right:5px;
+  margin-right:5px;
 }
 
 .choose ul li a:hover{
-	background:none;
-	color:#FE980F;
+  background:none;
+  color:#FE980F;
 }
 
 .category-tab {
@@ -1027,8 +1026,8 @@ h2.title {
 }
 
 .category-tab ul  li  a:hover{
-	background:#FE980F;
-	color:#fff;
+  background:#FE980F;
+  color:#fff;
 }
 
 .nav-tabs  li.active  a, .nav-tabs  li.active  a:hover, .nav-tabs  li.active  a:focus {
@@ -1089,7 +1088,7 @@ h2.title {
 
 
 .our_partners ul li a:hover{
-	background:none;
+  background:none;
 }
 
 /*************************
@@ -1145,8 +1144,8 @@ h2.title {
 }
 
 .pagination  li  a:hover{
-	background:#FE980F;
-	color:#fff;
+  background:#FE980F;
+  color:#fff;
 }
 
 
@@ -1156,7 +1155,7 @@ h2.title {
 **************************/
 
 .product-details{
-	overflow:hidden;
+  overflow:hidden;
 }
 
 
@@ -1202,7 +1201,7 @@ h2.title {
 }
 
 #similar-product .carousel-inner .item{
-	padding-left:0px;
+  padding-left:0px;
 }
 
 #similar-product .carousel-inner .item img {
@@ -1222,7 +1221,7 @@ h2.title {
 }
 
 .item-control i:hover{
-	background:#ccccc6;
+  background:#ccccc6;
 }
 
 .product-information {
@@ -1235,9 +1234,9 @@ h2.title {
 }
 
 .newarrival{
-	position:absolute;
-	top:0;
-	left:0
+  position:absolute;
+  top:0;
+  left:0
 }
 
 .product-information h2 {
@@ -1312,8 +1311,8 @@ h2.title {
   padding-bottom: 10px;
 }
 .shop-details-tab .col-sm-12 {
-	padding-left: 0;
-	padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 
@@ -1326,7 +1325,7 @@ h2.title {
 }
 
 #reviews  ul  li {
-	display:inline-block;
+  display:inline-block;
 }
 
 #reviews ul li a {
@@ -1338,17 +1337,17 @@ h2.title {
 }
 
 #reviews ul li a i{
-	color:#FE980F;
-	padding-right:8px;
+  color:#FE980F;
+  padding-right:8px;
 }
 
 #reviews ul li a:hover{
-	background:#fff;
-	color:#FE980F;
+  background:#fff;
+  color:#FE980F;
 }
 
 #reviews p{
-	color:#363432;
+  color:#363432;
 }
 
 #reviews  form span {
@@ -1500,10 +1499,29 @@ h2.title {
   padding: 6px 25px;
 }
 
-.login-form label{
-
+ .signup-form form button {
+  background: #FE980F;
+  border: medium none;
+  border-radius: 0;
+  margin-top: 20px;
+  color: #FFFFFF;
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  padding: 6px 25px;
 }
-
+.form-one button{
+margin-top: 23px;
+}
+.form-one button {
+  background: #FE980F;
+  border: medium none;
+  border-radius: 4px;
+  margin-top: 50px;
+  color: #FFFFFF;
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  padding: 10px 75px;
+}
 
 .login-form label input {
   border: medium none;
@@ -1894,15 +1912,15 @@ h2.title {
 
 
 .form-two, .form-one {
-  float: left;
-  width: 47%
+  
 }
 
 
 .shopper-info > form > input, 
-.form-two > form > select, 
-.form-two > form > input, 
-.form-one > form > input {
+
+.billing-form >  select,
+.billing-form >  input
+{
   background:#F0F0E9;
   border: 0 none;
   margin-bottom:10px;
