--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,8 +102,8 @@
         </div>
       </div>
     </div><!--/header-middle-->
-  <h4 align="center"  style="color:green;"><%= notice %></h4>
-  <h4 align="center" style="color:red;" ><%= alert %></h4>
+  <h4 align="center"  ><%= notice %></h4>
+  <h4 align="center" ><%= alert %></h4>
         <% if controller_name != 'sessions'  && controller_name != 'registrations' %>
           <div class="header-bottom"><!--header-bottom-->
             <div class="container">
