--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,13 @@
   padding: 2px;
   margin: -10px 0 0 -182px;
 }
+.signup-seperator {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  padding: 2px;
+  margin: -10px 0 0 -182px;
+}
 .sigin{
   margin-top: 40px;
   margin-left: 30px;
