--- a/app/views/cart_items/update.js.erb
+++ b/app/views/cart_items/update.js.erb
@@ -1,2 +1,3 @@
 $('#item-<%=@cart_item[:id]%>').html("<%= j (render partial: 'cart_item',  :locals => {:item => @cart_item}) %>");
 $('#total_area').html("<%= j (render partial: 'total_area',:locals => {:tax => @tax, :cart_sub_total => @cart_sub_total}) %>");
+$('#checkout_total_area').html("<%= j (render partial: 'checkouts/total_area',:locals => {:tax => @tax, :cart_sub_total => @cart_sub_total, :total => @total}) %>");
