add check out button

--- a/app/views/cart_items/_total_area.html.erb
+++ b/app/views/cart_items/_total_area.html.erb
@@ -6,5 +6,5 @@
     <li>Total <span><%= @tax.to_i + @cart_sub_total.to_i %></span></li>
   </ul>
     <a class="btn btn-default update" href="">Update</a>
-    <a class="btn btn-default check_out" href="">Check Out</a>
+    <%= link_to(checkouts_path, class: "btn btn-default check_out") do %>Check Out<% end %>
 </div>
