--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,11 +45,11 @@
                 <span>&#8377;<%= @product.price %>&#160;&#160;&#160;&#160;
                   <% if customer_signed_in? %>
                     <% if current_customer.cart_items.pluck(:product_id ).include?(@product.id) %>
-                      <%= link_to(cart_item_path(current_customer), class: "btn btn-default add-to-cart") do %>
+                      <%= link_to(cart_items_path, class: "btn btn-default add-to-cart") do %>
                         <i class="fa fa-shopping-cart"></i> Go to Cart
                       <% end -%>
                     <% else %>
-                      <%= link_to(cart_items_path(product_id: @product.id),:method => :post, class: "btn btn-default add-to-cart") do %>
+                      <%= link_to(cart_items_path, :method => :post, class: "btn btn-default add-to-cart") do %>
                         <i class="fa fa-shopping-cart"></i>Add to cart
                       <% end -%>
                     <% end %>
