--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -135,7 +135,7 @@
                         <li><%= link_to "Home", root_path, class: "#{active}" %></li>
                         <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                           <ul role="menu" class="sub-menu">
-                              <li><%= link_to(products_path) do %>Products<% end %></li>
+                              <li><%= link_to(root_path) do %>Products<% end %></li>
                               <li><a href="#">Product Details</a></li> 
                               <li><%= link_to(checkouts_path) do %>Checkout<% end %></li> 
                               <li><%=link_to(cart_items_path) do %>Cart<% end %></li> 
