--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -13,10 +13,10 @@
 <td class="cart_quantity">
   <div class="cart_quantity_button">
     <% but_disable1 = item.quantity == 1 ? "disabled" : ""%>
-    <% but_disable2 = item.product.quantity == 0 ? "disabled" : ""%>
+    <% but_disable2 = item.product.quantity <= item.quantity ? "disabled" : ""%>
     <%= link_to(cart_item_path(item, qty: "plus",product_id: item.product.id), class: "cart_quantity_up btn #{but_disable2}", :method => :put, remote: true) do %> + <% end %>
 
-    <%= number_field_tag :quantity, "#{item.quantity}", class: "cart_quantity_input", id: "cart-item-#{item.id}", min: 1, max:"#{item.quantity+item.product.quantity}" , onfocusout: "update_quantity(#{item.id}, #{item.product.id},1, #{item.quantity+item.product.quantity}, #{item.quantity})" %>
+    <%= number_field_tag :quantity, "#{item.quantity}", class: "cart_quantity_input", id: "cart-item-#{item.id}", min: 1, max:"#{item.product.quantity}" , onfocusout: "update_quantity(#{item.id}, #{item.product.id},1, #{item.product.quantity}, #{item.quantity})" %>
 
    <%= link_to(cart_item_path(item, qty: "minus",product_id: item.product.id), class: "cart_quantity_up btn #{but_disable1} ", :method => :put, remote: true) do %> - <% end %>
   </div>
