--- a/app/views/components/_content.html.erb
+++ b/app/views/components/_content.html.erb
@@ -14,7 +14,7 @@
         <% end %>
         <% if customer_signed_in? %>
           <% if current_customer.cart_items.pluck(:product_id ).include?(product.id) %>
-              <%= link_to(cart_item_path(current_customer), class: "btn btn-default add-to-cart") do %>
+              <%= link_to(cart_items_path, class: "btn btn-default add-to-cart") do %>
                  <i class="fa fa-shopping-cart"></i>Go to Cart
               <% end -%>
           <% else %><%= link_to(cart_items_path(product_id: product.id),:method => :post, remote: true,  class: "btn btn-default add-to-cart") do %>
