--- a/app/views/components/_left_side_bar.html.erb
+++ b/app/views/components/_left_side_bar.html.erb
@@ -24,9 +24,11 @@
                     <% @categories.find(category.id).brands.each do |brand|%>
                     <% brand1 = "" %>
                     <% brand1 = "brand" if current_page?category_brand_path(brand,category_id: category)%>
+                    
                       <li >
-                        <%= link_to(category_brand_path(category,brand),class: "#{brand1}") do %><%= brand.name %><% end %>
+                        <%= link_to(category_brand_path(category,brand), class: "#{brand1}") do %><%= brand.name %><% end %>
                       </li>
+                    
                     <% end %>
                   </ul>
                 </div>
@@ -42,8 +44,12 @@
       <div class="brands-name">
         <ul class="nav nav-pills nav-stacked">
           <% @top_brands.each_with_index do |brand,index| %>
-          
-            <li><a href="#"> <span class="pull-right">(<%= brand.products.count %>)</span><%= brand.name %></a></li>
+          <% brand4 = "" %>
+          <% brand4 = "brand" if current_page?brands_path(id: brand.id)%>
+          <% if brand.products.present? %>
+            <li><%= link_to(brands_path(id: brand.id), class: "#{brand4}") do%>
+             <span class="pull-right">(<%= brand.products.count %>)</span><%= brand.name %><%end%></li>
+            <% end %>
          <% end %>
         </ul>
       </div>
