--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,25 +1,24 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Brands</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @brands.each do |brand| %>
-      <tr>
-        <td><%= link_to 'Show', brand %></td>
-        <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
-        <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Brand', new_brand_path %>
+<section>
+  <div class="container">
+    <div class="row">
+      <%= render "components/left_side_bar"%>
+       <div class="col-sm-9 padding-right">
+        <div class="category-tab"><!--category-tab-->
+          
+          <div class="tab-content">
+            <%if @products.present? %>
+              <% @products.each do |product| %>
+                <div class="tab-pane fade active in" id="product-list-<%=product.id%>" >
+                  <%= render "components/content" ,product: product %>
+                </div>
+              <%end%>
+            <% else %>
+              <h2 align="center"> Product not available</h2>
+            <% end %>
+           </div>
+        </div><!--/category-tab-->
+     
+      <%= render "components/recommended" %>
+    </div><!--/recommended_items-->
+  </div>
+</div>
