--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -49,7 +49,7 @@
                         <i class="fa fa-shopping-cart"></i> Go to Cart
                       <% end -%>
                     <% else %>
-                      <%= link_to(cart_items_path, :method => :post, class: "btn btn-default add-to-cart") do %>
+                      <%= link_to(cart_items_path(product_id: @product.id), :method => :post, class: "btn btn-default add-to-cart") do %>
                         <i class="fa fa-shopping-cart"></i>Add to cart
                       <% end -%>
                     <% end %>
