--- a/app/views/components/_slider.html.erb
+++ b/app/views/components/_slider.html.erb
@@ -8,7 +8,6 @@
             <li data-target="#slider-carousel" data-slide-to="<%= index %>" class="<%= index == 0 ? 'active' : '' %>"</li>
             <% end %>
           </ol>
-          
           <div class="carousel-inner">
             <% @banners.each_with_index do |banner, index| %>
               <%if banner.status == true %>
@@ -20,14 +19,13 @@
                     <button type="button" class="btn btn-default get">Get it now</button>
                   </div>
                   <div class="col-sm-6">
-                     <%= image_tag(banner.pictures.find_by(imageable_id: banner.id).image.url, class: 'girl img-responsive') %>
-                    <%= image_tag "home/pricing.png", class: "pricing"%>
+                     <%= image_tag(banner.pictures.first.image.url, class: 'girl img-responsive') %>
+                    <%= image_tag(banner.pictures.second.image.url,  class: "pricing")%>
                   </div>
                 </div>
               <% end %>
             <% end %>
           </div>
-          
           <a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
             <i class="fa fa-angle-left"></i>
           </a>
