--- a/app/views/components/_content.html.erb
+++ b/app/views/components/_content.html.erb
@@ -2,12 +2,10 @@
   <div class="product-image-wrapper">
     <div class="single-products">
       <div class="productinfo text-center">
-        
         <%= link_to product_path(product) do %>
           <%= image_tag(product.pictures.find_by(imageable_id: product.id).image.url) %>
         <% end %>
-
-        <h2>Rs.<%= product.price %></h2>
+        <h2>&#8377; <%= product.price %></h2>
         
         <%= link_to product_path(product) do%>
           <p> <%= truncate(product.name , length:23) %></p>
@@ -17,12 +15,13 @@
               <%= link_to(cart_items_path, class: "btn btn-default add-to-cart") do %>
                  <i class="fa fa-shopping-cart"></i>Go to Cart
               <% end -%>
-          <% else %><%= link_to(cart_items_path(product_id: product.id),:method => :post, remote: true,  class: "btn btn-default add-to-cart") do %>
+          <% else %>
+            <%= link_to(cart_items_path(product_id: product.id),:method => :post, remote: true,  class: "btn btn-default add-to-cart") do %>
                  <i class="fa fa-shopping-cart"></i> Add to cart
-              <% end -%>
+            <% end -%>
           <% end %>
         <% else %> 
-          <%= link_to(cart_items_path(product_id: product.id),:method => :post, class: "btn btn-default add-to-cart") do %>
+          <%= link_to(cart_items_path(product_id: product.id),:method => :post, remote: true, class: "btn btn-default add-to-cart") do %>
              <i class="fa fa-shopping-cart"></i>
               Add to cart
           <% end %>
