--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,25 +1,26 @@
-<p id="notice"><%= notice %></p>
+<section>
+  <div class="container">
+    <div class="row">
+      <%= render "components/left_side_bar"%>
+      <div class="col-sm-9 padding-right">
+        <div class="category-tab"><!--category-tab-->
+          <div class="tab-content">
+            <%if @products.present? %>
+              <% @products.each do |product| %>
+                <div class="tab-pane fade active in" id="product-list-<%=product.id%>" >
+                  <%= render "components/content" ,product: product %>
+                </div>
+              <%end%>
+            <% else %>
+              <h2 align="center"> Product not available</h2>
+            <% end %>
+          </div>
+        </div>
+          <%= render "components/recommended" %>
+        </div><!--/recommended_items-->
+      </div>
+    </div>
+  </div>
+</section>
 
-<h1>Listing Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
