--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,19 +1,25 @@
-<%= form_tag charges_path do %>
-  <article>
-    <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
-      </div>
-    <% end %>
-    <label class="amount">
-      <span>Amount: &#8377;<%= @amount %> </span>
-    </label>
-  </article>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-2 col-sm-offset-5">
+      <%= form_tag charges_path do %>
+        <article>
+          <% if flash[:error].present? %>
+            <div id="error_explanation">
+              <p><%= flash[:error] %></p>
+            </div>
+          <% end %>
+          <label class="amount">
+            <span>Amount: &#8377;<%= @amount %> </span>
+          </label>
+        </article>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-description="A month's subscription"
-    data-amount= <%= @amount %>
-    data-locale="auto">
-  </script>
-<% end %>
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="A month's subscription"
+          data-amount= <%= @amount*100 %>
+          data-locale="auto">
+        </script>
+      <% end %>
+    </div>
+  </div>
+</div>
