--- a/app/views/customer_mailer/welcome_email.html.erb
+++ b/app/views/customer_mailer/welcome_email.html.erb
@@ -4,9 +4,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @customer.first_name %></h1>
+    <h1>Welcome to http://madhu-eshopper.herokuapp.com/, <%= @customer.first_name %></h1>
+    <%= image_tag "home/logo.png" %>
     <p>
-      You have successfully signed up to example.com,
+      You have successfully signed up to http://madhu-eshopper.herokuapp.com/,
       your username is: <%= @customer.email %>.<br>
     </p>
     <p>
