--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,5 +125,28 @@
 }
 .checkout-total{
   border:none;
+}
+button a{
+  color:#FFFFFF;
+}
+.cancel-button{
+ 
+}
+.div-border{
+  border-style: inset;
+}
+.invoice-title h2, .invoice-title h3 {
+    display: inline-block;
+}
 
+.table > tbody > tr > .no-line {
+    border-top: none;
+}
+
+.table > thead > tr > .no-line {
+    border-bottom: none;
+}
+
+.table > tbody > tr > .thick-line {
+    border-top: 2px solid;
 }
