--- a/app/views/cart_items/destroy.js.erb
+++ b/app/views/cart_items/destroy.js.erb
@@ -2,3 +2,8 @@ $("#item-<%=@cart_item[:id]%>").remove();
 $('#total_area').html("<%= j (render partial: 'total_area',:locals => {:tax => @tax, :cart_sub_total => @cart_sub_total}) %>");
 $('#cart-item-count').html(" (" +<%= @cart_items.count %>+ " )" )
 $('#checkout_total_area').html("<%= j (render partial: 'checkouts/total_area',:locals => {:tax => @tax, :cart_sub_total => @cart_sub_total, :total => @total}) %>");
+$('#empty').html("<%= j (render partial: 'empty_item') %>");
+$('#table-head').html("<%= j (render partial: 'table_head') %>");
+$('#checkout-table-head').html("<%= j (render partial: 'checkouts/table_head') %>");
+
+c
