--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -7,17 +7,9 @@
       </ol>
     </div>
     <div class=" cart_info">
-      
         <table class="table table-condensed">
-          <thead>
-            <tr class="cart_menu">
-              <td class="image">Item</td>
-              <td class="description"></td>
-              <td class="price">Price</td>
-              <td class="quantity">Quantity</td>
-              <td class="total">Total</td>
-              <td></td>
-            </tr>
+          <thead id="table-head">
+            <%= render "table_head" %>
           </thead>
               <% @cart_items.each do |item|%>
                 <tr id="item-<%=item.id %>">
@@ -26,75 +18,17 @@
               <% end %>
           </tbody>
         </table>
-     
+      <div id="empty">
+        <%= render "empty_item"%>
+      </div>
     </div>
   </div>
 </section> <!--/#cart_items-->
 <section id="do_action">
-  <div class="container">
-    <div class="heading">
-      <h3>What would you like to do next?</h3>
-      <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="chose_area">
-          <ul class="user_option">
-            <li>
-              <input type="checkbox">
-              <label>Use Coupon Code</label>
-            </li>
-            <li>
-              <input type="checkbox">
-              <label>Use Gift Voucher</label>
-            </li>
-            <li>
-              <input type="checkbox">
-              <label>Estimate Shipping & Taxes</label>
-            </li>
-          </ul>
-          <ul class="user_info">
-            <li class="single_field">
-              <label>Country:</label>
-              <select>
-                <option>United States</option>
-                <option>Bangladesh</option>
-                <option>UK</option>
-                <option>India</option>
-                <option>Pakistan</option>
-                <option>Ucrane</option>
-                <option>Canada</option>
-                <option>Dubai</option>
-              </select>
-              
-            </li>
-            <li class="single_field">
-              <label>Region / State:</label>
-              <select>
-                <option>Select</option>
-                <option>Dhaka</option>
-                <option>London</option>
-                <option>Dillih</option>
-                <option>Lahore</option>
-                <option>Alaska</option>
-                <option>Canada</option>
-                <option>Dubai</option>
-              </select>
-            
-            </li>
-            <li class="single_field zip-field">
-              <label>Zip Code:</label>
-              <input type="text">
-            </li>
-          </ul>
-          <a class="btn btn-default update" href="">Get Quotes</a>
-          <a class="btn btn-default check_out" href="">Continue</a>
-        </div>
-      </div>
-      <div class="col-sm-6" id="total_area">
-        <%=render "total_area"%>
-      </div>
-    </div>
+  <div id="total_area">
+    <%if current_customer.cart_items.present? %>
+      <%=render "total_area"%>
+    <%end%>
   </div>
 </section><!--/#do_action-->
-   
+    
