--- a/app/views/checkouts/_total_area.html.erb
+++ b/app/views/checkouts/_total_area.html.erb
@@ -1,18 +1,20 @@
-<table class="table table-condensed total-result">
-  <tr>
-    <td>Cart Sub Total</td>
-    <td><%= @cart_sub_total %></td>
-  </tr>
-  <tr>
-    <td>Exo Tax</td>
-    <td><%= @tax %></td>
-  </tr>
-  <tr>
-    <td>Shipping Cost</td>
-    <td><%=  @shipping_cost1 %></td>                   
-  </tr>
-  <tr>
-    <td>Total</td>
-    <td ><span ><%= @total %></span></td>
-  </tr>
-</table>
+<%if current_customer.cart_items.present? %>
+  <table class="table table-condensed total-result">
+    <tr>
+      <td>Cart Sub Total</td>
+      <td><%= @cart_sub_total %></td>
+    </tr>
+    <tr>
+      <td>Exo Tax</td>
+      <td><%= @tax %></td>
+    </tr>
+    <tr>
+      <td>Shipping Cost</td>
+      <td><%=  @shipping_cost1 %></td>                   
+    </tr>
+    <tr>
+      <td>Total</td>
+      <td ><span ><%= @total %></span></td>
+    </tr>
+  </table>
+<% end %>
