--- a/app/views/customer_mailer/welcome_email.html.erb
+++ b/app/views/customer_mailer/welcome_email.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Welcome to http://madhu-eshopper.herokuapp.com/, <%= @customer.first_name %></h1>
-    <%= image_tag "home/logo.png" %>
+    <%#= image_tag "home/logo.png" %>
     <p>
       You have successfully signed up to http://madhu-eshopper.herokuapp.com/,
       your username is: <%= @customer.email %>.<br>
