--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -83,12 +83,8 @@
                     <td class="no-line text-right">&#8377;15</td>
                   </tr>
                   <tr class="cancel-button cancel-payment">
-                    <td class="no-line " ><%= link_to "Cancel Order", cancel_order_customer_order_path(@customer_order),  class: "btn btn-default" %>&nbsp;&nbsp;
-                    <%= link_to "Continue shoping", root_path,  class: "btn btn-default" %>
-
-                    </td>
+                    <td class="no-line " ></td>
                     <td class="no-line"></td>
-                   
                     <td class="no-line text-center"><strong>Total</strong></td>
                     <td class="no-line text-right">&#8377;<%= 15 + subtotal %></td>
                   </tr>
